# news-financeira

./: .gitignore  03_news_financeira.py  README.md  prompt.py  pyproject.toml
