[project]
name = "news-finc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.2.10",
    "openai>=2.7.1",
    "python-dotenv>=1.2.1",
    "scrapeless>=1.2.1",
    "tavily-python>=0.7.12",
    "yfinance>=0.2.66",
]
